# Moe

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE  README.md  README.rst  alembic.ini  codecov.yml  pyproject.toml  pytest.ini  setup.cfg  tox.ini
.github/: codecov.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  config.yml  feature-request.md  feature_request.md
.github/scripts/: get_latest_changelog.py  prep_release.py
.github/workflows/: ci.yml  network_test.yml  prep_release.yml  preview_docs.yml  release.yml  tag_release.yml
alembic/: env.py  script.py.mako
alembic/versions/: 090eed218a8e_initial_generation.py  0aae92be930b_initial_generation.py  0ce5960a081e_new_field_catalog_nums.py  10f2c1aedd13_initial_generation.py  237369bfff77_initial_generation.py  30668259fcd6_new_field_country.py  32e9fea590b7_new_field_track_total.py  32f71e3629db_initial_generation.py  3af977cf2c1f_initial_generation.py  4279789f5739_audio_format_non_null.py  4fbd0213f158_initial_generation.py  530acc53e20c_initial_generation.py  5b8249a3b10a_initial_generation.py  60608d9d2908_new_field_media.py  67afb7deba19_custom_fields.py  6c1306e0a867_initial_generation.py  6d4e785df5cb_initial_generation.py  7d60bb382473_add_basic_track_fields.py  7ea4ddf23121_remove_file_ext.py  817440447857_new_field_label.py  880c5a2d80ed_remove_audio_format_field.py  883cc62bc334_rename_albumartist.py  94c4c93b8fbc_add_title_to_track.py  ab11c34c1d0b_new_field_audio_format.py  ab5db9861d30_rename_custom_fields.py  b5507b03f9e3_remove_extra_filename.py  bf1e35ea8744_non_nullable_fields.py  bf49ac6805f7_json_multi_value_fields.py  c55ddce79421_make_id_private.py  db3a470892c6_new_field_og_date.py  eb8c7e20a080_new_field_barcode.py  fe0956c93730_new_field_artists.py
docs/: cli.rst  conf.py  configuration.rst  developers.rst  fields.rst  getting_started.rst  global.rst  index.rst  installation.rst  official_plugins.rst  query.rst  third_party_plugins.rst
docs/developers/: contributing.rst  developers.rst  hooks.rst  writing_plugins.rst
docs/developers/api/: api.rst  cli.rst  core.rst  hooks.cli.rst  hooks.core.rst  hooks.rst  moe.cli.rst  moe.core.library.rst  moe.core.rst  moe.plugins.rst  moe.rst
docs/docs/source/: modules.rst  moe.core.library.rst
docs/plugins/: add.rst  duplicate.rst  edit.rst  import.rst  index.rst  info.rst  list.rst  ls.rst  move.rst  musicbrainz.rst  plugins.rst  read.rst  remove.rst  rm.rst  sync.rst  write.rst
docs/source/: moe.core.library.rst  moe.core.rst  moe.plugins.rst  moe.rst  tests.rst
fili/: __init__.py  cli.py
moe/: __init__.py  cli.py  config.py  list.py  query.py  write.py
moe/add/: __init__.py  add_cli.py  add_core.py
moe/alembic/: __init__.py  alembic.ini  env.py  script.py.mako
moe/alembic/versions/: 10f2c1aedd13_initial_generation.py
moe/core/: config.py  library.py  query.py
moe/duplicate/: __init__.py  dup_cli.py  dup_core.py
moe/edit/: __init__.py  edit_cli.py  edit_core.py
moe/lib/: __init__.py  hooks.py  library.py
moe/moe_alembic/: alembic.ini
moe/moe_alembic/versions/: 0ce5960a081e_new_field_catalog_nums.py  16590851e88e_new_field_composer_sort.py  31e896e9a709_new_field_composer.py  32e9fea590b7_new_field_track_total.py  421189d03b1d_new_field_duration.py  5e0ebfebadeb_add_composer_composers_and_composer_.py  6d4e785df5cb_initial_generation.py  ab5db9861d30_rename_custom_fields.py  bf49ac6805f7_json_multi_value_fields.py
moe/moe_import/: __init__.py  import_cli.py  import_core.py
moe/move/: __init__.py  move_cli.py  move_core.py
moe/musicbrainz/: mb_cli.py  mb_core.py
moe/plugins/: __init__.py  add.py  edit.py  hello.py  info.py  list.py  ls.py  move.py  musicbrainz.py  remove.py  rm.py  write.py
moe/plugins/add/: __init__.py  add.py  add_cli.py  add_core.py  hooks.py  match.py  prompt.py
moe/plugins/duplicate/: __init__.py  dup_cli.py  dup_core.py
moe/plugins/edit/: __init__.py  edit_cli.py  edit_core.py
moe/plugins/moe_import/: __init__.py  import_cli.py  import_core.py
moe/plugins/move/: __init__.py  move_cli.py  move_core.py
moe/plugins/musicbrainz/: __init__.py  mb_cli.py  mb_core.py
moe/plugins/read/: __init__.py  read_cli.py  read_core.py
moe/plugins/remove/: __init__.py  rm_cli.py  rm_core.py
moe/plugins/sync/: __init__.py  sync_cli.py  (+1 more)
moe/read/: __init__.py  read_cli.py  read_core.py
moe/remove/: __init__.py  rm_cli.py  rm_core.py
moe/sync/: sync_cli.py
moe/util/: __init__.py
moe_alembic/: env.py
moe_alembic/versions/: 30668259fcd6_new_field_country.py  60608d9d2908_new_field_media.py  817440447857_new_field_label.py  880c5a2d80ed_remove_audio_format_field.py  ab11c34c1d0b_new_field_audio_format.py  db3a470892c6_new_field_og_date.py  eb8c7e20a080_new_field_barcode.py  fe0956c93730_new_field_artists.py
src/moe/: cli.py  config.py  query.py
tests/: conftest.py  test_add.py  test_cli.py  test_config.py  test_edit.py  test_info.py  test_list.py  test_ls.py  test_move.py  test_musicbrainz.py  test_query.py  test_remove.py  test_rm.py  test_session.py  test_write.py
tests/add/: test_add_cli.py  test_add_core.py
tests/core/: __init__.py  test_session.py
tests/duplicate/: test_dup_cli.py  test_dup_core.py
tests/edit/: __init__.py  test_edit_cli.py  test_edit_core.py
tests/import/: test_import_cli.py  test_import_core.py
tests/move/: test_move_cli.py  test_move_core.py
tests/musicbrainz/: test_mb_cli.py  test_mb_core.py
tests/plugins/: __init__.py  test_info.py  test_list.py  test_write.py
tests/read/: test_read_cli.py  test_read_core.py
tests/remove/: test_rm_cli.py  test_rm_core.py
tests/resources/: __init__.py  empty.flac
tests/sync/: test_sync_cli.py  test_sync_core.py
tests/test_add/: test_add.py  test_add_cli.py  test_match.py  test_prompt.py
tests/test_edit/: test_edit_core.py
tests/test_musicbrainz/: __init__.py  test_mb_cli.py  test_mb_core.py  test_musicbrainz.py
tests/test_remove/: test_rm_core.py
tests/transcode/: test_transcode_core.py
(+73 files in other folders)
